@@ -1,3 +1,8 @@
+2002-08-01  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gas/mips/elf-rel6.[sd]: New test.
+	* gas/mips/mips.exp: Run it.
+
 2002-07-29  Chris Demetriou  <cgd@broadcom.com>
 
 	* gas/mips/elf_ase_mips16.d: New file to test ELF MIPS16 ASE marking.
