@@ -1,3 +1,8 @@
+2002-08-01  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/tc-mips.c (tc_gen_reloc): Extend GP-relative addend
+	handling to BFD_RELOC_MIPS16_GPREL.
+
 2002-08-01  Nick Clifton  <nickc@redhat.com>
 
 	* config/tc-arm.c (add_to_lit_pool): Ensure that offset to literal
